--- a/app1/templates/cto/cto_assign_task.html
+++ b/app1/templates/cto/cto_assign_task.html
@@ -17,24 +17,34 @@
             <br>
             <button type="submit">Assign</button>
         </form>
-        {{ if messages }}
-        {{for message in messages}}
+        {% if messages %}
+        {%for message in messages%}
             <p>{{ message }}</p>
-        {{ endfor }}
-        {{ endif }}
+        {% endfor %}
+        {% endif %}
 
         <h3>Tasks assigned</h3>
-        <table>
+        <table border="1">
             <tr>
                 <th>Title</th>
-                <th>Description</th>
+                <th>Status</th>
                 <th>Assigned at</th>
             </tr>
+            {% for task in tasks %}
             <tr>
-                <td>{{ tasks.title }}</td>
-                <td>{{ tasks.status }}</td>
-                <td>{{ tasks.created_at}}</td>
+                <td>{{ task.title }}</td>
+                <td>{{ task.status }}</td>
+                <td>{{ task.created_at}}</td>
+                <td>
+                    <form method="POST" action="{% url 'delete_task' task.id%}">
+                    {% csrf_token %}
+                    <button type="submit" onclick="return confirm('Are you sure you want to delete this task?')">Delete</button>
+                    </form>
+                </td>
             </tr>
+            {% empty %}
+            <tr><td colspan="3">No tasks assigned yet</td></tr>
+            {% endfor %}
         </table>
     </body>
 </html>
