--- a/app1/templates/cto/cto_dashboard.html
+++ b/app1/templates/cto/cto_dashboard.html
@@ -51,7 +51,7 @@
             <tr>
                 <td>{{ spm.spm_id }}</td>
                 <td>{{ spm.name }}</td>
-                <td><a href="{% url 'cto_spm' spm.id%}">Assign Task</a></td>
+                <td><a href="{% url 'cto_spm' spm.spm_id%}">Assign Task</a></td>
             </tr>
             {% empty %}
             <tr><td colspan="2">No SPMs created yet</td></tr>
