before creating models for the bottom level roles

--- a/app1/templates/SPM/dashboard.html
+++ b/app1/templates/SPM/dashboard.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Welcome SPM {{ spm.name }}</h1>
+        <h2>Assigned tasks</h2>
         <table border="1">
             <tr>
                 <th>Title</th>
