--- a/app1/templates/cto/cto_login.html
+++ b/app1/templates/cto/cto_login.html
@@ -15,6 +15,7 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password"><br>
             <button type="submit">Login</button>
+            <p>Dont have an account?<a href="{% url 'ctoAuthSignup' %}">SignUp</a></p>
         </form>
         {% if messages %}
             <div class="error-message">
