--- a/app1/templates/SPM/dashboard.html
+++ b/app1/templates/SPM/dashboard.html
@@ -38,5 +38,33 @@
         
         {%endfor%}
     </table>
+    <div class="error-message">
+        {% for message in messages%}
+        <p style="color:red">{{ message }}</p>
+        {%endfor%}
+    </div>
+    <h2>Create a new role?</h2>
+    <form method="POST" action="{% url 'spm_role_creation' spm.spm_id %}">
+        {% csrf_token %}
+        <label for="name">Employee Name:</label>
+        <input type="text" id="name" name="name"><br>
+        <label for="role">Select role:</label>
+        <select id="role" name="role">
+            <option value="senior_dev">SeniorDeveloper</option>
+            <option value="intern">Intern</option>
+            <option value="uiux_designer">UI/UX Designer</option>
+            <option value="dev_ops">DevOps Engineer</option>
+            <option value="network">Network Engineer</option>
+        </select><br>
+        <label for="password">Enter password:</label>
+        <input type="password" id="password" name="password"><br>
+        <label for="confirm-password">Confirm-password:</label>
+        <input type="password" id="confirm-password" name="confirm-password"><br>
+        <button type="submit">Create Role</button>
+    </form>
+    <div>
+        {% for %}
+        {%endfor%}
+    </div>
     </body>
 </html>
