--- a/app1/templates/employee/home.html
+++ b/app1/templates/employee/home.html
@@ -5,8 +5,37 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Employee home page</title>
         <h1>Welcome {{ role }} {{ name }}</h1>
+        <h3>Your company : {{ company }}</h3>
     </head>
     <body>
-        
+        <table border="1">
+            <tr>
+                <th>Title</th>
+                <th>Description</th>
+                <th>Assigned at</th>
+                <th>Assigned by </th>
+                <th>Status</th>
+                <th>Mark as complete</th>
+            </tr>
+            <tr>
+                {% for emp_task in emp_tasks %}
+                    <td>{{ emp_task.title }}</td>
+                    <td>{{ emp_task.description }}</td>
+                    <td>{{ emp_task.created_at }}</td>
+                    <td>{{ emp_task.created_by }}</td>
+                    <td>{{ emp_task.status }}</td>
+                    <td>
+                        <form action="{% url 'toggle_emp_task_checkbox' emp_task.id  %}" method="POST">
+                        {% csrf_token %}
+                            <input type="checkbox" name="task_status" onchange="this.form.submit()"  {% if emp_task.status == "Completed" %}checked {% endif %}>
+                        </form>
+                    </td>
+            </tr>  
+                    {% empty %}
+                    <tr>
+                        <td colspan="6" >No tasks assigned for you</td>
+                        </tr>
+                    {% endfor %} 
+        </table>
     </body>
 </html>
