--- a/app1/templates/home.html
+++ b/app1/templates/home.html
@@ -10,11 +10,12 @@
             {% csrf_token %}
             <button type="submit" name="role" value="CTO">Chief Technology Officer</button>
             <button type="submit" name="role" value="SPM">Senior Product Manager</button>
-            <button type="submit" name="role" value="SD">Senior Developer</button>
-            <button type="submit" name="role" value="Intern">Intern</button>
-            <button type="submit" name="role" value="uiux">UI/UX designer</button>
-            <button type="submit" name="role" value="devops">DevOPS Engineer</button>
-            <button type="submit" name="role" value="network">Networking Engineer</button>
+            <button type="submit" name="role" value="senior_dev" readonly>Senior Developer</button>
+            <button type="submit" name="role" value="intern" readonly>Intern</button>
+            <button type="submit" name="role" value="uiux_designer" readonly>UI/UX designer</button>
+            <button type="submit" name="role" value="dev_ops" readonly>DevOPS Engineer</button>
+            <button type="submit" name="role" value="network" readonly>Networking Engineer</button>
         </form>
     </body>
 <html>
+   
