--- a/app1/templates/SPM/spm_assign_task_emp.html
+++ b/app1/templates/SPM/spm_assign_task_emp.html
@@ -24,25 +24,30 @@
                     <th>Title</th>
                     <th>Description</th>
                     <th>Assigned at</th>
-                    <th>Assigned by</th>
                     <th>Status</th>
-                    <th>Mark as complete</th>
                 </tr>
                 {% for task in tasks %}
                 <tr>
                     <td>{{ task.title }}</td>
                     <td>{{ task.description }}</td>
                     <td>{{ task.created_at }}</td>
-                    <td>{{ task.created_by }}</td>
                     <td>{{ task.status }}</td>
                     <td>
-                        <form method="POST" action="">
-                            <input type="checkbox">
+                        <form method="POST" action="{% url 'emp_delete_task' task.id %}">
+                            {% csrf_token %}
+                            <button type="submit"onclick="return confirm('Are you sure you want to delete this task?')">Delete</button>
                         </form>
                     </td>
                 </tr>
+                {% empty %}
+                <td colspan="4">No tasks assigned yet!</td>
                 {% endfor %}
             </table>
+            {% if messages %}
+            {% for message in messages %}
+            <p>{{ message }}</p>
+            {% endfor %}
+            {% endif %}
         </div>
     </body>
 </html>
